# ros_beginner

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-ros_beginner  bazel-testlogs  generate_coverage_report.sh
.github/workflows/: docker-build.yml  main.yml
include/: ese.hpp
install/: local_setup.sh  setup.sh
install/time_sync/share/ament_index/resource_index/package_run_dependencies/: time_sync
install/time_sync/share/ament_index/resource_index/parent_prefix_path/: time_sync
install/time_sync/share/time_sync/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/time_sync/share/time_sync/cmake/: time_syncConfig.cmake
log/: latest_build
src/: ese.cpp  main.cpp
src/ese/: BUILD.bazel  ese.cpp
src/talker/: BUILD.bazel  talker_node.cpp
src/time_sync/: CMakeLists.txt
src/time_sync/include/time_sync/: msg_types.hpp
src/time_sync/src/: first_publisher.cpp  first_publisher.yaml  first_subscriber.cpp  first_subscriber.yaml  time_sync.launch.py
test/: ese_test.cpp
